// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field component Creates a number field 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          for="firstName"
        >
          First Name
           
          <span>
            *
          </span>
        </label>
        <text
          class="caldera-field caldera-field-text form-control"
          id="firstName"
          required=""
          type="text"
          value="roy"
        />
        <small
          class="text-muted form-text"
        >
          your first name
        </small>
      </div>
    </div>
    <div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          for="numberFieldId"
        >
          Number Field Label
           
          <span>
            *
          </span>
        </label>
        <text
          class="caldera-field caldera-field-text form-control"
          id="numberFieldId"
          max="10"
          min="1"
          required=""
          type="text"
          value="3"
        />
        <small
          class="text-muted form-text"
        >
          Number field description
        </small>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="numberFieldId"
      >
        Number Field Label
         
        <span>
          *
        </span>
      </label>
      <text
        class="caldera-field caldera-field-text form-control"
        id="numberFieldId"
        max="10"
        min="1"
        required=""
        type="text"
        value="3"
      />
      <small
        class="text-muted form-text"
      >
        Number field description
      </small>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllBySelectText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getAllByValue": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getBySelectText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "getByValue": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllBySelectText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryAllByValue": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryBySelectText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "queryByValue": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Field component Creates a text field 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          for="firstName"
        >
          First Name
           
          <span>
            *
          </span>
        </label>
        <text
          class="caldera-field caldera-field-text form-control"
          id="firstName"
          required=""
          type="text"
          value="roy"
        />
        <small
          class="text-muted form-text"
        >
          your first name
        </small>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="firstName"
      >
        First Name
         
        <span>
          *
        </span>
      </label>
      <text
        class="caldera-field caldera-field-text form-control"
        id="firstName"
        required=""
        type="text"
        value="roy"
      />
      <small
        class="text-muted form-text"
      >
        your first name
      </small>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllBySelectText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getAllByValue": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getBySelectText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "getByValue": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllBySelectText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryAllByValue": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryBySelectText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "queryByValue": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Field component Creates an checkbox field set 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          for="firstName"
        >
          First Name
           
          <span>
            *
          </span>
        </label>
        <text
          class="caldera-field caldera-field-text form-control"
          id="firstName"
          required=""
          type="text"
          value="roy"
        />
        <small
          class="text-muted form-text"
        >
          your first name
        </small>
      </div>
    </div>
    <div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          for="numberFieldId"
        >
          Number Field Label
           
          <span>
            *
          </span>
        </label>
        <text
          class="caldera-field caldera-field-text form-control"
          id="numberFieldId"
          max="10"
          min="1"
          required=""
          type="text"
          value="3"
        />
        <small
          class="text-muted form-text"
        >
          Number field description
        </small>
      </div>
    </div>
    <div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          for="emailFieldId"
        >
          Email Field Label
           
          <span>
            *
          </span>
        </label>
        <text
          class="caldera-field caldera-field-text form-control"
          id="emailFieldId"
          required=""
          type="text"
          value="emai@email.com"
        />
        <small
          class="text-muted form-text"
        >
          Email field description
        </small>
      </div>
    </div>
    <div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          for="checkboxFieldSetLabel"
        >
          Checkbox Field Set Label
           
          <span>
            *
          </span>
        </label>
        <fieldset>
          <legend>
            Checkbox Field Set Label
          </legend>
          <div
            class="form-check"
          >
            <input
              class="form-check-input"
              id="opt-1"
              type="checkbox"
            />
            <label
              class="form-check-label"
              for="opt-1"
              title=""
              type="checkbox"
            >
              One
            </label>
          </div>
          <div
            class="form-check"
          >
            <input
              class="form-check-input"
              id="opt-2"
              type="checkbox"
            />
            <label
              class="form-check-label"
              for="opt-2"
              title=""
              type="checkbox"
            >
              Two
            </label>
          </div>
          <div
            class="form-check"
          >
            <input
              class="form-check-input"
              id="opt-3"
              type="checkbox"
            />
            <label
              class="form-check-label"
              for="opt-3"
              title=""
              type="checkbox"
            >
              Three
            </label>
          </div>
        </fieldset>
        <small
          class="text-muted form-text"
        >
          Checkbox field set description
        </small>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="checkboxFieldSetLabel"
      >
        Checkbox Field Set Label
         
        <span>
          *
        </span>
      </label>
      <fieldset>
        <legend>
          Checkbox Field Set Label
        </legend>
        <div
          class="form-check"
        >
          <input
            class="form-check-input"
            id="opt-1"
            type="checkbox"
          />
          <label
            class="form-check-label"
            for="opt-1"
            title=""
            type="checkbox"
          >
            One
          </label>
        </div>
        <div
          class="form-check"
        >
          <input
            class="form-check-input"
            id="opt-2"
            type="checkbox"
          />
          <label
            class="form-check-label"
            for="opt-2"
            title=""
            type="checkbox"
          >
            Two
          </label>
        </div>
        <div
          class="form-check"
        >
          <input
            class="form-check-input"
            id="opt-3"
            type="checkbox"
          />
          <label
            class="form-check-label"
            for="opt-3"
            title=""
            type="checkbox"
          >
            Three
          </label>
        </div>
      </fieldset>
      <small
        class="text-muted form-text"
      >
        Checkbox field set description
      </small>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllBySelectText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getAllByValue": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getBySelectText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "getByValue": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllBySelectText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryAllByValue": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryBySelectText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "queryByValue": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Field component Creates an email field 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          for="firstName"
        >
          First Name
           
          <span>
            *
          </span>
        </label>
        <text
          class="caldera-field caldera-field-text form-control"
          id="firstName"
          required=""
          type="text"
          value="roy"
        />
        <small
          class="text-muted form-text"
        >
          your first name
        </small>
      </div>
    </div>
    <div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          for="numberFieldId"
        >
          Number Field Label
           
          <span>
            *
          </span>
        </label>
        <text
          class="caldera-field caldera-field-text form-control"
          id="numberFieldId"
          max="10"
          min="1"
          required=""
          type="text"
          value="3"
        />
        <small
          class="text-muted form-text"
        >
          Number field description
        </small>
      </div>
    </div>
    <div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          for="emailFieldId"
        >
          Email Field Label
           
          <span>
            *
          </span>
        </label>
        <text
          class="caldera-field caldera-field-text form-control"
          id="emailFieldId"
          required=""
          type="text"
          value="emai@email.com"
        />
        <small
          class="text-muted form-text"
        >
          Email field description
        </small>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="emailFieldId"
      >
        Email Field Label
         
        <span>
          *
        </span>
      </label>
      <text
        class="caldera-field caldera-field-text form-control"
        id="emailFieldId"
        required=""
        type="text"
        value="emai@email.com"
      />
      <small
        class="text-muted form-text"
      >
        Email field description
      </small>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllBySelectText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getAllByValue": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getBySelectText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "getByValue": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllBySelectText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryAllByValue": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryBySelectText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "queryByValue": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Field component Creates an select field 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          for="firstName"
        >
          First Name
           
          <span>
            *
          </span>
        </label>
        <text
          class="caldera-field caldera-field-text form-control"
          id="firstName"
          required=""
          type="text"
          value="roy"
        />
        <small
          class="text-muted form-text"
        >
          your first name
        </small>
      </div>
    </div>
    <div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          for="numberFieldId"
        >
          Number Field Label
           
          <span>
            *
          </span>
        </label>
        <text
          class="caldera-field caldera-field-text form-control"
          id="numberFieldId"
          max="10"
          min="1"
          required=""
          type="text"
          value="3"
        />
        <small
          class="text-muted form-text"
        >
          Number field description
        </small>
      </div>
    </div>
    <div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          for="emailFieldId"
        >
          Email Field Label
           
          <span>
            *
          </span>
        </label>
        <text
          class="caldera-field caldera-field-text form-control"
          id="emailFieldId"
          required=""
          type="text"
          value="emai@email.com"
        />
        <small
          class="text-muted form-text"
        >
          Email field description
        </small>
      </div>
    </div>
    <div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          for="checkboxFieldSetLabel"
        >
          Checkbox Field Set Label
           
          <span>
            *
          </span>
        </label>
        <fieldset>
          <legend>
            Checkbox Field Set Label
          </legend>
          <div
            class="form-check"
          >
            <input
              class="form-check-input"
              id="opt-1"
              type="checkbox"
            />
            <label
              class="form-check-label"
              for="opt-1"
              title=""
              type="checkbox"
            >
              One
            </label>
          </div>
          <div
            class="form-check"
          >
            <input
              class="form-check-input"
              id="opt-2"
              type="checkbox"
            />
            <label
              class="form-check-label"
              for="opt-2"
              title=""
              type="checkbox"
            >
              Two
            </label>
          </div>
          <div
            class="form-check"
          >
            <input
              class="form-check-input"
              id="opt-3"
              type="checkbox"
            />
            <label
              class="form-check-label"
              for="opt-3"
              title=""
              type="checkbox"
            >
              Three
            </label>
          </div>
        </fieldset>
        <small
          class="text-muted form-text"
        >
          Checkbox field set description
        </small>
      </div>
    </div>
    <div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          for="selectFieldId"
        >
          Select Field Label
           
          <span>
            *
          </span>
        </label>
        <select
          class="form-control"
          id="selectFieldId"
          required=""
        >
          <option
            value="0"
          >
            Zero
          </option>
          <option
            value="1"
          >
            One
          </option>
          <option
            value="2"
          >
            Two
          </option>
        </select>
        <small
          class="text-muted form-text"
        >
          Select field description
        </small>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="selectFieldId"
      >
        Select Field Label
         
        <span>
          *
        </span>
      </label>
      <select
        class="form-control"
        id="selectFieldId"
        required=""
      >
        <option
          value="0"
        >
          Zero
        </option>
        <option
          value="1"
        >
          One
        </option>
        <option
          value="2"
        >
          Two
        </option>
      </select>
      <small
        class="text-muted form-text"
      >
        Select field description
      </small>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllBySelectText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getAllByValue": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getBySelectText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "getByValue": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllBySelectText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryAllByValue": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryBySelectText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "queryByValue": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Field component Creates an select field identified as dropdown 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          for="firstName"
        >
          First Name
           
          <span>
            *
          </span>
        </label>
        <text
          class="caldera-field caldera-field-text form-control"
          id="firstName"
          required=""
          type="text"
          value="roy"
        />
        <small
          class="text-muted form-text"
        >
          your first name
        </small>
      </div>
    </div>
    <div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          for="numberFieldId"
        >
          Number Field Label
           
          <span>
            *
          </span>
        </label>
        <text
          class="caldera-field caldera-field-text form-control"
          id="numberFieldId"
          max="10"
          min="1"
          required=""
          type="text"
          value="3"
        />
        <small
          class="text-muted form-text"
        >
          Number field description
        </small>
      </div>
    </div>
    <div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          for="emailFieldId"
        >
          Email Field Label
           
          <span>
            *
          </span>
        </label>
        <text
          class="caldera-field caldera-field-text form-control"
          id="emailFieldId"
          required=""
          type="text"
          value="emai@email.com"
        />
        <small
          class="text-muted form-text"
        >
          Email field description
        </small>
      </div>
    </div>
    <div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          for="checkboxFieldSetLabel"
        >
          Checkbox Field Set Label
           
          <span>
            *
          </span>
        </label>
        <fieldset>
          <legend>
            Checkbox Field Set Label
          </legend>
          <div
            class="form-check"
          >
            <input
              class="form-check-input"
              id="opt-1"
              type="checkbox"
            />
            <label
              class="form-check-label"
              for="opt-1"
              title=""
              type="checkbox"
            >
              One
            </label>
          </div>
          <div
            class="form-check"
          >
            <input
              class="form-check-input"
              id="opt-2"
              type="checkbox"
            />
            <label
              class="form-check-label"
              for="opt-2"
              title=""
              type="checkbox"
            >
              Two
            </label>
          </div>
          <div
            class="form-check"
          >
            <input
              class="form-check-input"
              id="opt-3"
              type="checkbox"
            />
            <label
              class="form-check-label"
              for="opt-3"
              title=""
              type="checkbox"
            >
              Three
            </label>
          </div>
        </fieldset>
        <small
          class="text-muted form-text"
        >
          Checkbox field set description
        </small>
      </div>
    </div>
    <div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          for="selectFieldId"
        >
          Select Field Label
           
          <span>
            *
          </span>
        </label>
        <select
          class="form-control"
          id="selectFieldId"
          required=""
        >
          <option
            value="0"
          >
            Zero
          </option>
          <option
            value="1"
          >
            One
          </option>
          <option
            value="2"
          >
            Two
          </option>
        </select>
        <small
          class="text-muted form-text"
        >
          Select field description
        </small>
      </div>
    </div>
    <div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          for="selectFieldId"
        >
          Select Field Label
           
          <span>
            *
          </span>
        </label>
        <select
          class="form-control"
          id="selectFieldId"
          required=""
        >
          <option
            value="0"
          >
            Zero
          </option>
          <option
            value="1"
          >
            One
          </option>
          <option
            value="2"
          >
            Two
          </option>
        </select>
        <small
          class="text-muted form-text"
        >
          Select field description
        </small>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="selectFieldId"
      >
        Select Field Label
         
        <span>
          *
        </span>
      </label>
      <select
        class="form-control"
        id="selectFieldId"
        required=""
      >
        <option
          value="0"
        >
          Zero
        </option>
        <option
          value="1"
        >
          One
        </option>
        <option
          value="2"
        >
          Two
        </option>
      </select>
      <small
        class="text-muted form-text"
      >
        Select field description
      </small>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllBySelectText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getAllByValue": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getBySelectText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "getByValue": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllBySelectText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryAllByValue": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryBySelectText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "queryByValue": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
